--- a/src/app/components/search-header/search-header.component.scss
+++ b/src/app/components/search-header/search-header.component.scss
@@ -13,13 +13,14 @@
   justify-content: center;
 
   .logo {
+    margin-left: 10px;
     width: 30px;
     height: 30px;
   }
 
   .searchForm {
     display: inline-block;
-    width: calc(100% - 30px);
+    width: calc(100% - 40px);
     max-width: 300px;
     padding: 0 16px;
 
